--- a/argument.yml
+++ b/argument.yml
@@ -9,7 +9,7 @@ x_shift_range: [0.00, 0.00, -0.015, -0.015]
 y_shift_range: [0.00, 0.00, -0.015, -0.00]
 z_shift_range: [-0.05, -0.05, -0.05, -0.05]
 traj_types: ['double-straight-line', 'double-straight-line', 'circle', 'circle']
-video_postfix: ['zoom-in']
+video_postfix: ['dolly-zoom-in', 'zoom-in', 'circle', 'swing']
 specific: ''
 longer_side_len: 960
 src_folder: image
